# nix-ml-ops

./: .devcontainer.json  .gitattributes  .gitignore  CODEOWNERS  LICENSE  README.md  flake-modules.nix  flake.nix  lib.nix  options.md
examples/devenv-python/: .gitignore  README.md  flake.nix
examples/my-project/: .gitignore  README.md  flake.nix
examples/poetry-docker-job/: README.md  flake.nix  pyproject.toml
examples/poetry-docker-job-azure/: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
flake-modules/: aks-credential.nix  common.nix  cuda.nix  devcontainer-azure-cli-tools.nix  devcontainer-gcp-cli-tools.nix  devcontainer.nix  devenv-python-with-libstdc++.nix  devserver.nix  gke-credential.nix  jobs.nix  kubernetes-job.nix  kubernetes-service.nix  kubernetes.nix  lib.nix  link-nvidia-drivers.nix  nix-ide.nix  nix-ld.nix  nixpkgs.nix  options-document.nix  overridable-package.nix  python-envs-pep508.nix  python-envs-poetry.nix  python-package.nix  python-vscode.nix  runtime-mount-dev-shm.nix  runtime.nix  services.nix  skypilot.nix  systems.nix  volume-mount-empty-dir.nix  volume-mount-nfs.nix  vscode.nix
nixos-modules/: azureuser.nix  cudart.nix  devserver.nix  direnv.nix  logrotate.nix  nfs.nix  nix-ld.nix  nix-settings.nix  nvidia-docker.nix  nvme.nix  packages.nix  state-version.nix  sudo.nix  swap.nix
