[tool.poetry]
name = "poetry-docker-job"
version = "0.1.0"
description = ""
authors = ["Yang, Bo <bo@preemo.io>"]
readme = "README.md"
packages = [{include = "poetry_docker_job"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
